# libowl

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  libowl.pc.in
inc/: Makefile.am
inc/libowl/: addr.h
src/: Makefile.am
src/utils/: Makefile.am  addr.c
test/utils/: Makefile.am  addr.c
