#
# Copyright (C) 2020 Simon Batardiere - All rigths reserved.
#
# This file is part of the libowl package.
# This code is licensed under LGPL-v2.1.
# See LICENSE file, which is part of the libowl package, for more details.
#

ACLOCAL_AMFLAGS = -I m4
SUBDIRS = inc src test
pkgconfig_DATA = libowl.pc

