#
# Copyright (C) 2020 Simon Batardiere - All rigths reserved.
#
# This file is part of the libowl package.
# This code is licensed under LGPL-v2.1.
# See LICENSE file, which is part of the libowl package, for more details.
#

include_libowldir = ${includedir}/libowl
include_libowl_HEADERS = \
	libowl/addr.h

