#
# Copyright (C) 2020 Simon Batardiere - All rigths reserved.
#
# This file is part of the libowl package.
# This code is licensed under LGPL-v2.1.
# See LICENSE file, which is part of the libowl package, for more details.
#

AM_CPPFLAGS = -I${top_builddir}/inc
AM_CFLAGS = -Wall -Wextra -Wshadow -Wstrict-prototypes \
	-Wmissing-prototypes -Wno-unused-parameter -Werror

noinst_LTLIBRARIES = libowl-utils.la

noinst_HEADERS =
libowl_utils_la_SOURCES = addr.c

